refactor: migrated ByteArrayUtils to kotlin